[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicta"
version = "1.2.0"
authors = [
    { name="Peter Wendl", email="dev@peterwendl.de" },
]
description = "A `dict` subclass that detects changes in its data structure. It triggers a callback and/or exports its data to JSON file if the data has changed."
keywords = ["nested-objects", "json", "dict", "serialization", "listener", "fileimport", "callback"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mextex/dicta"