[metadata]
name = dicta
version = 1.0.0
author = peterwendl
author_email = dev@peterwendl.de
description = A dict subclass to observe data changes in the nested data-tree.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mextex/dicta
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src